--- a/stylesheet.css
+++ b/stylesheet.css
@@ -27,7 +27,7 @@ body {
 
 button {
     font-size: 16px;
-    color: orangered;
+    color: darkblue;
     font-family: courier;
     font-weight: bold;
 }
