--- a/stylesheet.css
+++ b/stylesheet.css
@@ -19,10 +19,10 @@
 
 body {
     font-size: 16px;
-    color: seagreen;
+    color: darkgreen;
     font-family: courier;
     font-weight: bold;
-    background-color: lightsteelblue;
+    background-color: darkseagreen;
 }
 
 button {
@@ -34,4 +34,6 @@ button {
 
 #jstree{
     height: length|percentage|auto|initial|inherit;
+    margin: 0px 0px 30px 0px;
 }
+
